--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "firebase": "^8.0.1",
+    "firebaseui": "^4.7.1",
     "pretty-lights": "^0.0.19",
     "react": "^17.0.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -40,6 +45,8 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-prettier": "^6.15.0"
+    "env-cmd": "^10.1.0",
+    "eslint-config-prettier": "^6.15.0",
+    "firebase-admin": "^9.4.1"
   }
 }
