--- a/package.json
+++ b/package.json
@@ -6,19 +6,25 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
+    "bootstrap4": "^0.0.1-security",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
+    "downloadbutton": "^1.0.0",
     "firebase": "^8.0.1",
     "firebaseui": "^4.7.1",
     "pretty-lights": "^0.0.19",
     "react": "^17.0.1",
+    "react-autocomplete": "^1.8.1",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -26,6 +32,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": "15"
   },
   "eslintConfig": {
     "extends": [
