--- a/functions/Makefile
+++ b/functions/Makefile
@@ -1,7 +1,4 @@
 release:
-	gcloud functions deploy CreateInternalDeck --runtime go113 --trigger-http
-	gcloud functions deploy CreateTTSDeck --runtime go113 --trigger-http
-
-update-cards:
-	export FIREBASE_CONFIG=`cat ~/snackend-b1d70cced136.json`
-	(cd ./cloudfuncs && go test )
+	#gcloud functions deploy CreateInternalDeck --runtime go113 --trigger-http
+	#gcloud functions deploy CreateTTSDeck --runtime go113 --trigger-http
+	@gcloud functions deploy CreateAllFormats --runtime go113 --trigger-http
