--- a/package.json
+++ b/package.json
@@ -16,14 +16,12 @@
     "pretty-lights": "^0.0.19",
     "react": "^17.0.1",
     "react-autocomplete": "^1.8.1",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-bootstrap-table2-filter": "^1.3.3",
-    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-select": "^3.1.0",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
@@ -56,7 +54,10 @@
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
+    "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "firebase-admin": "^9.4.1"
   }
 }
