--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "downloadbutton": "^1.0.0",
     "firebase": "^8.0.1",
     "firebaseui": "^4.7.1",
+    "mana-font": "^1.9.4",
     "pretty-lights": "^0.0.19",
     "react": "^17.0.1",
     "react-autocomplete": "^1.8.1",
+    "react-data-grid": "^7.0.0-canary.33",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
-    "react-table": "^7.6.2",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
