--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "svg-inline-react": "^3.2.0",
     "unique-names-generator": "^4.3.1",
     "uuid": "^8.3.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.1"
   },
   "scripts": {
     "start": "react-scripts start",
