swapped to react-bootstrap-table

--- a/functions/Makefile
+++ b/functions/Makefile
@@ -1,2 +1,7 @@
 release:
 	@gcloud functions deploy CreateAllFormats --runtime go113 --trigger-http
+
+
+test:
+	@GOOGLE_APPLICATION_CREDENTIALS=$(shell cat ${HOME}/listing-publisher.json)
+	go test
