--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "pretty-lights": "^0.0.19",
     "react": "^17.0.1",
     "react-autocomplete": "^1.8.1",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-card-flip": "^1.0.11",
-    "react-data-grid": "^7.0.0-canary.33",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
     "react-paypal-button-v2": "^2.6.2",
