--- a/functions/Makefile
+++ b/functions/Makefile
@@ -1,7 +1,7 @@
+GOOGLE_APPLICATION_CREDENTIALS=${HOME}/listing-publisher.json
 release:
 	@gcloud functions deploy CreateAllFormats --runtime go113 --trigger-http
 
 
 test:
-	@GOOGLE_APPLICATION_CREDENTIALS=$(shell cat ${HOME}/listing-publisher.json)
-	go test
+	($(shell export GOOGLE_APPLICATION_CREDENTIALS)  go test)
