--- a/functions/Makefile
+++ b/functions/Makefile
@@ -1,6 +1,6 @@
 GOOGLE_APPLICATION_CREDENTIALS=${HOME}/listing-publisher.json
 release:
-	@gcloud functions deploy CreateAllFormats --runtime go113 --trigger-http --set-env-vars=[FIREBASE_CONFIG=${FIREBASE_CONFIG}]
+	@gcloud functions deploy CreateAllFormats 
 
 test:
 	($(shell export GOOGLE_APPLICATION_CREDENTIALS)  go test)
