fixed land count

--- a/functions/Makefile
+++ b/functions/Makefile
@@ -1,4 +1,7 @@
 GOOGLE_APPLICATION_CREDENTIALS=${HOME}/listing-publisher.json
+
+run-functions:
+	./run.sh
 release:
 	@gcloud functions deploy CreateAllFormats 
 
@@ -8,5 +11,3 @@ test:
 gg:
 	echo $(shell 'cat ~/marketplace.json')
 
-run-functions:
-	FIREBASE_CONFIG=${FIREBASE_CONFIG}  go run cmd/local/main.go
